# django_template

./: .gitignore  README.md  docker-compose.caddy.yml  docker-compose.prod.yml  pyproject.toml
backend/: .env  .env.dev  .env.prod  Dockerfile  db.sqlite3  default_data.json  entrypoint.dev.sh  entrypoint.prod.sh
backend/shop/: admin.py  models.py  signals.py  tasks.py  urls.py
backend/shop/api/: serializers.py  urls.py  views.py
backend/shop/migrations/: 0001_initial.py  0002_accounts_transactions.py  0003_transaction_rename_accounts_account_and_more.py  0004_remove_transaction_account_delete_account_and_more.py
backend/shop/templates/: main.html
backend/src/: db.sqlite3  urls.py
backend/src/settings/: __init__.py  base.py  database.py  local_settings.py
caddy_server/: Caddyfile  Dockerfile  index.html
